--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,11 +13,14 @@
     "@react-oauth/google": "^0.12.1",
     "@tailwindcss/vite": "^4.0.14",
     "axios": "^1.8.4",
+    "chatzy": "file:..",
     "lucide-react": "^0.487.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
+    "react-player": "^2.16.0",
     "react-router-dom": "^7.4.1",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.0.14",
     "zustand": "^5.0.3"
   },
